src/main/resources/web/css/semantic-ui-overrides.css
/** Comapny Homepage Semantic UI Overrides **/

body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
}

select,
input[type="button"],
button {
    cursor: pointer;
}

h3.header .value {
    margin-left: 0.5em;
    font-weight: normal;
    font-style: italic;
    font-size: 0.8em;
}

.masthead.segment {
    min-height: 700px;
    padding: 1em 0em;
}

.masthead .logo.item img {
    margin-right: 1em;
}

.masthead .ui.menu .ui.button {
    margin-left: 0.5em;
}

.masthead h2 {
    font-size: 1.7em;
    font-weight: normal;
}

.page .ui.text.container {
    max-width: 900px !important;
}

.ui.text.container .metadata {
    margin-top: 1.5em;
}

.ui.vertical.stripe {
    padding: 8em 0em;
}

.ui.vertical.stripe .floated.image {
    clear: both;
}

.ui.segment .tile {
    font-size: 1.25em;
}

article .text {
    font-size: 1.1em;
}

.ui.vertical.stripe .horizontal.divider {
    margin: 3em 0em;
}

.ui.vertical.stripe.quote .row {
    box-shadow: -1px -.5px 0px .5px #d4d4d5;
    -webkit-box-shadow: -1px -.5px 0px .5px #d4d4d5;
}

.page .ui.segment.footer.inverted a {
    color: rgba(255,255,255,.5);
}

.page .ui.segment.footer.inverted a:hover {
    color: rgba(255,255,255,1);
}

.footer.segment {
    padding: 5em 0em;
}

.footer .site-link .logo {
    max-width: 250px;
    height: auto;
}

.footer .site-link h1 {
    margin-bottom: 1em;
}

.footer .caption {
    margin-bottom: 2em;
}

#lower-page-nav .toc.item,
#header-page-nav .toc.item {
    display: none;
}

#header-page-nav .ui.inverted.menu .header.item {
    margin-top: -0.1em;
}

#header-page-nav .ui.inverted.menu .item:not(.dropdown) {
    margin-top: -1px;
}

/** --- Header Styles --- **/

header {
    position: relative;
}

header .page-meta,
header .page-buttons {
    margin-top: 1.7em;
    margin-bottom: 4em;
}

header .page-buttons div {
    display: inline-block;
}

header.header-background .ui.container
header.header-background .ui.container {
    padding-bottom: 4em;
}

header .ui.primary.button {
    font-size: 1em;
}

header .page-meta {
    position: absolute;
    bottom: .5em;
    right: 2em;
}

header.inverted .page-meta .value,
header.inverted .page-meta .label {
    color: #585858;
}

/** -- Frontpage Body Segment Style -- **/

.posts article {
    padding-top: 1em;
}

.page .segment .text a {
    text-decoration: underline;
}

.page.front .segment .text a {
    text-decoration: none;
}

.page.front .segment .content a:hover {
    text-decoration: underline;
}

.page .segment .text a.button {
    text-decoration: none;
}

/** --- Segments Stylings --- **/

.body .ui.spaced.segment {
    padding-bottom: 10em;
}

.body .ui.spaced.segment.accordion-section {
    padding-bottom: 0em;
}

.body .ui.accordion-section {
    padding-top: 1em;
    padding-bottom: 3em;
    margin-bottom: 3em;
}

.ui.grid > .row > .column {
    padding: 1em 3em 2.5em 3em;
}

.ui.stackable.grid.basic.segment {
    padding: 0em;
}

.body .ui.segment.posts h1.ui.header {
    margin-bottom: 1em;
}

.page .ui.segment .header .caption p {
    margin-bottom: 0px;
}

.body .ui.vertical.posts.stripe  {
    padding: 0em;
    padding-bottom: 6em;
}

.ui.styled.accordion {
    margin-top: 2em;
}

.ui.styled.accordion .title,
.ui.styled.accordion .content {
    font-size: 16px;
}

.ui.segment.ten-six-columns .container.grid,
.ui.segment.two-columns-equal .container.grid {
    margin: auto !important;
}

@media only screen and (max-width: 767px) {
    .ui.grid>.stackable.stackable.row>.column,
    .ui.stackable.grid>.column.grid>.column,
    .ui.stackable.grid>.column.row>.column,
    .ui.stackable.grid>.column:not(.row),
    .ui.stackable.grid>.row>.column,
    .ui.stackable.grid>.row>.wide.column,
    .ui.stackable.grid>.wide.column {
        padding: 2.5rem !important;
    }
    .page .ui.text.container {
        padding: 1.5rem !important;
    }
    .footer .ui.container {
        padding: 2.5rem !important;
        margin-left: 0em !important;
        margin-right: 0em !important;
    }
}

/** Section Layout Stylings --*/

/** ### **/
.ui.vertical.segment.two-n-columns,
.ui.vertical.segment.n-columns {
    padding-bottom: 3em;
}

.ui.segment.two-columns-equal .grid .column {
    padding-bottom: 2em;
}

.ui.equal.grid.quote .tile-content {
    padding: 2em;
}

/** ### **/
.ui.vertical.segment.two-n-columns .grid .column,
.ui.segment.n-columns .grid .column {
    padding: 2em;
}

.ui.segment.single-tile .tile-row h1,
.ui.segment.single-tile .tile-row h2 {
    margin-top: 2em;
}

/** ### **/
.ui.vertical.segment.two-n-columns .row .column {
    padding-left: 3em;
    padding-right: 3em;
}

.ui.segment .tile.clickable {
    cursor: pointer;
}

.ui.segment .tile.clickable:hover {
    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2)
}

/** --- Article Styles --- **/

article figure {
    margin: 0em;
}

.ui.table {
    background: transparent;
    border-radius: 0px;
}

.ui.table tr:hover {
    background-color: #ffffff55;
}

article .ui.table td,
article table td {
    padding: .2125em .725em;
}

article table caption {
    margin-bottom: .5em;
}

article .text caption,
article figure figcaption {
    font-size: .8em;
    color: #666;
    padding: 0.7em;
}

article img,
article figure img {
    max-width: 100%;
    height: auto;
}

article .text pre.code-block {
    font-family: "Courier", "Courier New";
    font-size: .8em;
    color: rgb(0, 40, 86);
    background-color: #efefef;
    padding: .5em 1em;
    /** border: 1px solid rgba(0, 40, 86, 0.4); **/
    -moz-box-shadow:    inset 0 0 3px #767676;
    -webkit-box-shadow: inset 0 0 3px #767676;
    box-shadow:         inset 0 0 3px #767676;
}

.ui.vertical.segment.no-padding {
    /** border-top: 1px solid rgba(34, 36, 38, 0.15); **/
    padding: 0em;
}

.ui.vertical.segment.no-border {
    border-top: 0px solid transparent;
}

article .text blockquote {
    margin-left: 0px;
    font-style: italic;
    font-size: 1.2em;
    padding-left: 1em;
    border-left: 4px solid rgba(255,255,255,0.7);
}

.ui.vertical.menu.sidebar {
    z-index: 2001;
}

.ui.sidebar .inverted.menu .header {
    color: #fff;
}

/** #header-page-nav  ui.menu .item {
    min-height: 46px;
}
#header-page-nav .ui.menu .item:not(.dropdown) {
    padding-top: 2px;
} **/

@media only screen and (max-width: 1024px) {
    .body .ui.segment h1.ui.header {
        font-size: 2rem;
        margin: 1em 0em 0em 0em;
    }
    .body .ui.segment h2.ui.header {
        font-size: 1.5em;
    }
}

@media only screen and (max-width: 700px) {
    .ui.vertical.stripe.main-segment.posts.container {
        margin-left: 0em !important;
    }
    .ui.vertical.stripe.main-segment.posts.container div.text {
        margin-left: 1em;
    }
    #header-page-nav .menu-items .item,
    #lower-page-nav .menu-items .item {
        display: none;
    }
    #lower-page-nav .toc.item,
    #header-page-nav .menu .toc.item {
        display: block;
    }
    .masthead.segment {
        min-height: 350px;
    }
    .masthead h1.ui.header {
        font-size: 2em;
        margin-top: 1.5em;
    }
    .masthead h2 {
        margin-top: 0.5em;
        font-size: 1.5em;
    }
    header .page-meta {
        font-size: .7em;
    }
}

